--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <EditText
+        android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
@@ -14,5 +15,25 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <android.inputmethodservice.KeyboardView
+        android:id="@+id/keyboardView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="#D6D9DE"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:keyBackground="@drawable/keyboard_preview_layout"
+        android:keyPreviewHeight="50dp"
+        android:keyPreviewLayout="@layout/keyboard_key_btn"
+        android:keyPreviewOffset="-5dp"
+        android:keyTextColor="#747474"
+        android:keyTextSize="12sp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:shadowRadius="0.0"
+        android:visibility="gone" />
 
 </android.support.constraint.ConstraintLayout>
