增加下划线字符

--- a/keyboard/src/main/res/xml/keyboard_symbol.xml
+++ b/keyboard/src/main/res/xml/keyboard_symbol.xml
@@ -68,9 +68,9 @@
             android:codes="38"
             android:keyLabel="&#038;" />
         <Key
-            android:codes="47"
+            android:codes="95"
             android:keyEdgeFlags="right"
-            android:keyLabel="/" />
+            android:keyLabel="_" />
     </Row>
     <Row>
         <Key
